@@ -1,15 +1,0 @@
-IceWM provides a small, fast and familiar window manager for the X11 window
-system.  Compatibility with the mwm window manager is desired and will be
-implemented where appropriate.
-
-IceWM is designed to emulate the look of Motif, OS/2 Warp 4, OS/2 Warp 3 and
-Windows 95.  It also tries to combine the feel of these systems whenever it
-is compatible.  Others might added in the future in the core distribution,
-though many themes are available through the network.
-
-Generally, it tries to make all functions available both by keyboard and by
-mouse (this is not currently possible when using mouse focus).
-
-This package provides IceWM linked against the Imlib library for graphics
-support, which means that it supports all image formats supported by this
-library (like PNG, JPEG, GIF and TIFF).
